--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,13 @@
-*,:before,:after{
+*, ::before, ::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
   outline: none;
   border: none;
   background: none;
-  font-family: sans-serif;
 }
 
 :root {
-  --black: #000000;
+  --black: #000;
 }
